--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -3,4 +3,4 @@
 @media (min-width: 768px) { /* md */ }
 @media (min-width: 1024px) { /* lg */ }
 @media (min-width: 1280px) { /* xl */ }
-@media (min-width: 1536px) { /* 2xl */ }
+@media (min-width: 1536px) { /* xxl */ }
