Change Class Name and insert Util fot class name

--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -39,7 +39,7 @@
   }
 }
 
-/* 2xl — min-width: 1536px */
+/* xxl — min-width: 1536px */
 @media (min-width: 1536px) {
   .container {
     max-width: 1536px;
