--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -127,12 +127,12 @@
   .xl\:m-10 { margin: 10px; }
 }
 
-@media (min-width: 1536px) { /* 2xl */
-  ._2xl\:p-5 { padding: 5px; }
-  ._2xl\:p-10 { padding: 10px; }
-  ._2xl\:px-5 { padding-left: 5px; padding-right: 5px; }
-  ._2xl\:px-10 { padding-left: 10px; padding-right: 10px; }
-  ._2xl\:m-5 { margin: 5px; }
-  ._2xl\:m-10 { margin: 10px; }
+@media (min-width: 1536px) { /* xxl */
+  .xxl\:p-5 { padding: 5px; }
+  .xxl\:p-10 { padding: 10px; }
+  .xxl\:px-5 { padding-left: 5px; padding-right: 5px; }
+  .xxl\:px-10 { padding-left: 10px; padding-right: 10px; }
+  .xxl\:m-5 { margin: 5px; }
+  .xxl\:m-10 { margin: 10px; }
 }
 /* End of Utilities – KlarUI React */
